Fixes missing margins on wells.

--- a/app/styles/common/_footer.scss
+++ b/app/styles/common/_footer.scss
@@ -28,7 +28,7 @@ body {
   min-height: 100%;
   overflow: hidden;
   /* equal to footer height plus some extra spacing */
-  margin-bottom: -40px;
+  margin-bottom: -50px;
 }
 
 .nxg-main:after {
