--- a/app/styles/pages/_payments.scss
+++ b/app/styles/pages/_payments.scss
@@ -223,3 +223,9 @@
     }
   }
 }
+
+.sticky, .well.sticky {
+  margin-bottom: 0;
+}
+
+
